--- a/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
@@ -123,6 +123,8 @@
     bottom: 0;
     left: 0;
     right: 0;
+    /* Needed to keep the cardOverlayTarget from showing outside the bounds while it animates */
+    overflow: hidden;
 }
 
     .cardContent:not(.noHoverEffect):hover .cardImage {
