--- a/MediaBrowser.WebDashboard/dashboard-ui/css/site.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/site.css
@@ -312,6 +312,8 @@ html {
 
 body {
     overflow-y: scroll !important;
+    /* This is needed to prevent a horizontal scrollbar while neon-animated-pages are animating. */
+    overflow-x: hidden;
     font-size: 13px;
     font-family: Roboto, Arial, Helvetica, sans-serif;
     /*Can't use this with safari or it causes some content to disappear*/
@@ -328,6 +330,11 @@ body {
     overflow-x: visible !important;
     /* jqm often wants to assign a background color to this */
     background-color: transparent !important;
+}
+
+/* Undo this from jqm which may cause the page to have it's own scrollbar */
+.ui-mobile .ui-page-active {
+    overflow-x: visible;
 }
 
 .bodyWithPopupOpen {
@@ -752,7 +759,7 @@ h1 .imageLink {
     margin-bottom: 30px !important;
 }
 
-.page > .ui-content {
+.page > .ui-content, .pageWithAbsoluteTabs .pageTabContent {
     /* Need this so that the audio player doesn't cover content, but also for unveil lazy loading. */
     padding-bottom: 160px;
 }
