--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
@@ -2,9 +2,13 @@
     padding-top: 50px !important;
 }
 
-    .libraryPage:not(.metadataEditorPage):not(.noSecondaryNavPage) {
-        padding-top: 98px !important;
+    .libraryPage:not(.noSecondaryNavPage) {
+        padding-top: 96px !important;
     }
+
+.pageWithAbsoluteTabs:not(.noSecondaryNavPage) {
+    padding-top: 98px !important;
+}
 
 .sidebarDivider {
     height: 1px;
