update dto dictionary building

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
@@ -106,6 +106,10 @@
     margin-bottom: 24px;
 }
 
+.hiddenScrollX .bottomPaddedCard .cardBox {
+    margin-bottom: 0;
+}
+
 .visualCardBox {
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
