add more play buttons

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
@@ -358,6 +358,13 @@
     width: 42%;
 }
 
+@media all and (max-width: 500px) {
+
+    .backdropCard.fullWidthCardOnMobile {
+        width: 100% !important;
+    }
+}
+
 @media all and (max-width: 1200px) {
 
     .portraitCard .cardOverlayInner {
