--- a/MediaBrowser.WebDashboard/dashboard-ui/css/nowplaying.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/nowplaying.css
@@ -42,6 +42,10 @@
     z-index: 1000;
 }
 
+.nowPlayingPageRepeatActive {
+    color: #2ad !important;
+}
+
 .chapterMenuInner {
     padding: 1em 0;
     text-align: center;
@@ -193,6 +197,7 @@
         display: none;
     }
 }
+
 .nowPlayingPageUserDataButtons iron-icon {
     width: 40px;
     height: 40px;
