--- a/MediaBrowser.WebDashboard/dashboard-ui/css/tileitem.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/tileitem.css
@@ -1,5 +1,5 @@
 ﻿.tileItem {
-    padding: 5px 7px 5px;
+    padding: 5px 7px 5px 0;
     font-weight: normal !important;
     display: block;
     position: relative;
