fix live tv image

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
@@ -1443,7 +1443,7 @@ span.itemCommunityRating:not(:empty) + .userDataIcons {
     width: 70px;
     height: 70px;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     background-position: center center;
 }
 
