--- a/MediaBrowser.WebDashboard/dashboard-ui/css/livetv.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/livetv.css
@@ -7,6 +7,10 @@
     max-width: 100%;
 }
 
+.neon-animating .tvGuideHeader {
+    position: static;
+}
+
 .bottomSecondaryNav .tvGuideHeader {
     top: 48px;
 }
