update live tv channel ids

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/metadataeditor.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/metadataeditor.css
@@ -91,6 +91,9 @@
     padding-right: 0 !important;
 }
 
+.chkAirDay {
+    padding: 0 2em 1em 0;
+}
 
 .searchImage {
     background-position: center bottom;
